Added Squirtle + More CSS

--- a/Style.css
+++ b/Style.css
@@ -1,13 +1,27 @@
+@font-face{font-family: MainFont; src: url(GillSans.otf)}
+
 .grid-container {
     display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-evenly;
 }
 
-.cardFrame {
+.RcardFrame {
     background-color: rgb(196, 196, 196);
     width: 500px;
     height: 700px;
     border-style: solid;
     border-radius: 20px;
+
+}
+
+.ScardFrame {
+    background-color: rgb(29, 200, 223);
+    width: 500px;
+    height: 700px;
+    border-style: solid;
+    border-radius: 20px;
+
 }
 
 .rayquaza {
@@ -21,19 +35,62 @@
     border-color: rgb(150, 150, 150);
 }
 
-.stats{
+.squirtle {
+    width: 406px;
+    height: 356px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 2px;
+    border-style: solid;
+    border-color: rgb(26, 182, 202);
+}
+
+.Rstats{
     background-color: rgb(216, 216, 216) ;
+    font-family: MainFont;
     margin: auto;
     width: 85%;
     height: 30%;
     box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-h5 {
-    padding-top: 5%;
+.Sstats{
+    background-color: rgb(32, 215, 240) ;
+    font-family: MainFont;
+    margin: auto;
+    width: 85%;
+    height: 30%;
+    box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.stat {
+    padding-top: 3%;
     padding-left: 5%;
     margin-top: 7%;
     font-size: 25px;
+}
+
+h5{
+    margin-top: 1%;
+    padding-left: 5%;
+    font-weight: 100;
+}
+
+.statWDesc {
+    padding-top: 5%;
+    padding-left: 5%;
+    margin-top: 7%;
+    margin-bottom: 0%;
+    font-size: 25px;
+}
+
+h3 {
+    padding-left: 10%;
+    font-family: MainFont;
+    font-size: 30px;
+    margin-bottom: 1%;
+    margin-top: 1%;
 }
 
 
